# SearchForMemoryValue

./: .gitignore  .gitmodules  ByteOperations.sln  ByteOperations.vcxproj  ByteOperations.vcxproj.filters  CMakeLists.txt  LICENSE.txt  OpenGLMan.cpp  OpenGLMan.h  README.md  common.hpp  data.asm  fileMan.cpp  fileMan.h  image_utils.h  main.cpp  memoryMan.cpp  memoryMan.h  memoryMan.hpp  testOut.txt
include/: memoryMan.h  moreAdvancedMemoryManagement.h
libraries/: freeglut_static.lib
